--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;900&family=Rock+3D&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=My+Soul&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Moo+Lah+Lah&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&family=Petit+Formal+Script&display=swap');
 /* -------------------------- */
 :root{
     --primary: #B29B9C;
     --dark: #6F1E51;
+    --golden:#FFC312;
+    --water:#38ada9;
+}
+body{
+    padding: 0;
+    margin: 0;
+    font-family: 'Hind Siliguri', sans-serif;
 }
 section{
     margin: 4rem auto;
 }
-h2{
+.sub-heading{
     font-weight: 150;
     text-transform: uppercase;
     letter-spacing: 1px;
+    text-align: center;
 }
 
 /* -------------------------styles--------------- */
-
+.navbar-brand img{
+    width: 3rem;
+    /* transform: rotate(-45deg); */
+}
 .home_bg{
-    background: var(--primary);
-    height: 100vh;
+    /* background: var(--dark);
+    background: #bf85d4; */
+    /* background-color: #12CBC4; */
+  
     position: relative;
-    /* padding: 0 4rem 8rem 4rem; */
     width: 100%;
     overflow:hidden;
-    z-index: -4;
-}
-.home_bg .line{
-    position:absolute;
-    width: 2rem;
-    height: 2rem;
-    background: rgba(12, 10, 110, 0.2);
-    transform: rotate(45deg);
-}
-.line1{
-    top: 0%;
-    /* left: 10%; */
-}
-.line2{
-    top: 15%;
-    /* left: 5%; */
+    color: #846549;
+    color: var(--dark);
 
 }
-.line3{
-    top: 30%;
-    /* left: 5%; */
+.about{
+    position: relative;
 }
-.line4{
-    top: 45%;
+.about p{
+    line-break: loose;
 }
-.line5{
-    top: 60%;
-    /* left: 5%; */
+.about::before{
+    position: absolute;
+    left: -22px;
+    height: 100%;
+    width: 2px;
+    background-color: #998675;
+    content: '';
 }
-.line6{
-    top: 75%;
-    /* left: 5%; */
+/* .home_bg::before{
+    content: '';
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    background: #FDA7DF;
+    left: 50%;
+    z-index: -3;
+    border-left: 2px dotted rgba(12, 10, 110, 0.2);
+} */
 
-}
 
-.line7{
-    top: 90%;
-}
-
-.line8{
-    top: 110%;
-}
-
-.line9{
-    top: 125%;
-}
-.line10{
-    top:135%;
-    /* left: -5% !important; */
-
-}
-
-.logo h1{
+.cool{
     font-family: 'Moo Lah Lah', cursive;
     font-weight: 100 !important;
     font-size: 6rem;
@@ -91,17 +77,7 @@ h2{
 .logo img{
     width: 7rem;
 }
-.home_bg::before{
-    content: '';
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    background: var(--primary);
-    left: 50%;
-    /* transform: translateX(-50%); */
-    z-index: -3;
-    border-left: 2px dotted rgba(12, 10, 110, 0.2);
-}
+
 
 
 /* --------Navbar starts-------- */
@@ -134,7 +110,8 @@ h2{
 /* --------Navbar Ends-------- */
 .home{
     /* background: yellow; */
-    margin: 6rem auto !important;
+    margin: 3rem auto !important;
+    display: flex;
 }
 .home img{
     width: 30rem;
@@ -155,7 +132,7 @@ nav{
 
 /* -------------------------HANGING DESIGNS------------------------- */
 .hangingPattern {
-    padding: 8rem;
+    padding: 2rem;
 }
 .hangingPattern .bar{
     width: 100%;
@@ -223,32 +200,6 @@ nav{
 
 
 /* --------------------------------------------------------------------------- */
-.navigation{
-    /* margin: 4rem auto; */
-}
-.navigation .row, 
-.navigation .col-12{
-    padding: 0 !important;
-    margin: 0 !important;
-}
-.navigation .col-12{
-    /* background: yellow; */
-    height: 100%;
-    width: 100%;
-}
-.navigation .card{
-    height: 20rem;
-    width: 20rem;
-    height: 100%;
-    width: 100%;
-    border-radius: 0 !important;
-    padding: 4rem !important;
-    /* box-shadow: rgba(221, 186, 29, 0.25) 0px 1px 1px, rgba(240, 219, 30, 0.13) 0px 0px 1px 1px; */
-}
-.navigation h2{
-    color: white !important;
-
-}
 .navigation .card1{
     background: #D6A2E8;
 }
@@ -261,4 +212,183 @@ nav{
 }
 .navigation .card4{
     background: #cd84f1;
+}
+
+
+/* -----------Nature page starts-------- */
+.salutations{
+    width: 100%;
+   padding: 3rem;
+    background-image: linear-gradient(rgba(239, 238, 248, 0.5), rgba(15, 212, 226, 0.5));
+    /* background: #d2dae2; */
+    border-bottom: 3px solid #D980FA;
+}
+.maa{
+    /* width: 8rem; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* background: green; */
+}
+
+.salutations .container{
+    /* background: yellow; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* flex-direction: column; */
+}
+@import url('https://fonts.googleapis.com/css2?family=Petit+Formal+Script&display=swap');
+.salutations h1{
+    color: #D980FA;
+    font-family: 'Petit Formal Script', cursive;
+    margin: 2rem auto;
+    text-shadow: 0px 2px 2px rgba(148, 6, 6, 0.4);
+}
+.salutations .translation span{
+    color: var(--primary);
+    
+}
+.salutations .translation {
+    text-shadow: 0px 2px 2px rgba(32, 247, 86, 0.4);
+}
+.salutations img{
+    width: 6rem;
+}
+.salutations .mantra{
+    text-align: center;
+}
+.sides{
+    /* background: yellow; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.maa img{
+    width: 8rem;
+}
+.rt{
+    display: flex;
+}
+/* -----------Nature page ends-------- */
+
+
+
+.intro-to-fav{
+    text-align: center;
+    position: relative;
+    font-size: 1.5rem;
+    font-weight: 350;
+    margin-top: 4rem ;
+    color: var(--dark);
+    text-shadow: 0px 1px 1px rgba(44, 105, 167, 0.4);
+    border-top-left-radius:2px solid red ;
+}
+.intro-to-fav::before{
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 2px;
+    left: -10px;
+    background: var(--primary);
+}
+
+.intro-to-fav::after{
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 2px;
+    right: -10px;
+    background: var(--primary);
+    top: 0;
+}
+
+.favourite .favourite-festivals{
+margin: 2rem auto;
+/* text-align: center; */
+}
+.favourite h3{
+    color: var(--water);
+}
+.favourite-festivals .card{
+    text-align: center;
+    margin: 2rem auto;
+    display: flex;
+    flex-direction: column-reverse;
+    box-shadow: rgba(40, 189, 226, 0.15) 0px 3px 3px 0px;
+    border: 1px solid #f8f6f6;
+}
+.favourite-festivals .card:hover{
+    border:2px solid rgba(40, 189, 226, 0.15)
+}
+.favourite-festivals .card h4{
+    font-weight: 600;
+    text-shadow: 0px 1px 1px rgba(15, 19, 24, 0.4);
+
+    text-transform: uppercase;
+    margin: 2rem auto;
+}
+.favourite-festivals .card h4 .c1
+{
+    color:#EA2027
+}
+.favourite-festivals .card h4 .c2
+{
+    color:#EE5A24
+}
+.favourite-festivals .card h4 .c3
+{
+    color:#F79F1F
+}
+.favourite-festivals .card h4 .c4
+{
+    color:#FFC312
+}
+.favourite  .card h4 .d1{
+    color: #ED4C67;
+}
+.favourite  .card h4 .d2{
+    color: #B53471;
+}
+.favourite  .card h4 .d3{
+    color: #833471;
+}
+.favourite  .card h4 .d4{
+    color: #6F1E51;
+}
+.favourite  .card h4 .d5{
+    color: #D980FA;
+}
+.favourite  .card h4 .d6{
+    color: #FDA7DF;
+}
+.favourite .card h4 .b1{ color:#009432 ;}
+.favourite .card h4 .b2{ color:#006266 ;}
+.favourite .card h4 .b3{ color:#A3CB38 ;}
+.favourite .card h4 .b4{ color: #12CBC4;}
+.favourite .card h4 .b5{ color:#C4E538 ;}
+.favourite .card h4 .b6{ color:#16a085 ;}
+
+
+
+
+
+.my-work{
+
+}
+.my-work .buttons{
+    display: flex;
+    justify-content: space-around;
+    margin: 3rem auto;
+}
+.my-work .buttons button{
+    background: var(--primary);
+    color: white;
+}
+.show{
+    display: block;
+}
+.hide{
+    display: none;
 }
